MiniProfiler removed. NLog updated

--- a/src/AS.Admin/Views/Shared/_Admin.cshtml
+++ b/src/AS.Admin/Views/Shared/_Admin.cshtml
@@ -96,7 +96,7 @@
         </div>
     }
     <a id="backTop" class="btn btn-back-top bg-teal"></a>
-    @StackExchange.Profiling.MiniProfiler.RenderIncludes()
+    @*@StackExchange.Profiling.MiniProfiler.RenderIncludes()*@
 </body>
 </html>
 <script type="text/javascript">
