--- a/src/AS.Admin/Views/Shared/_Public.cshtml
+++ b/src/AS.Admin/Views/Shared/_Public.cshtml
@@ -19,15 +19,15 @@
     <script src="~/Content/html5shiv/dist/html5shiv.min.js"></script>
     <script src="~/Content/respond/respond.min.js"></script>
     <![endif]-->
-    <script type="text/javascript">
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-XXXX-Y');
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-28588612-2', 'auto');
         ga('send', 'pageview');
+    </script>
+    <script type="text/javascript">
         var StringResources =  @Html.Raw(Json.Encode(Model.Header.ClientResources));
 
         function isEmpty(el) {
