--- a/src/AS.Admin/Views/Settings/ApplicationSettings.cshtml
+++ b/src/AS.Admin/Views/Settings/ApplicationSettings.cshtml
@@ -12,6 +12,7 @@
     @Html.FormLineEditorFor(m => m.RecaptchaDisplayCount)
     @Html.FormLineEditorFor(m => m.DbQueryLogEnable)
     @Html.FormLineEditorFor(m => m.BundlingEnabled)
+    @Html.FormLineEditorFor(m => m.RequestLoggingEnabled)
     @Html.FormLineDropDownListFor(m => m.MinLogLevel, Model.LogLevels)
 }
 <script type="text/javascript">
