--- a/src/AS.Admin/Views/Configuration/Index.cshtml
+++ b/src/AS.Admin/Views/Configuration/Index.cshtml
@@ -300,6 +300,8 @@
                 @Html.FormLineEditorFor(m => m.IsDemo)
                 @Html.FormLineEditorFor(m => m.RecaptchaPrivateKey)
                 @Html.FormLineEditorFor(m => m.RecaptchaPublicKey)
+                @Html.FormLineEditorFor(m => m.GooglePlusClientId)
+                @Html.FormLineEditorFor(m => m.GooglePlusClientSecret)
                 <div class="form-group">
                     <div class="col-sm-2"></div>
                     <div class="col-sm-10 form-button-wrapper">
